# SecureFileManagementSystem

./: PROJECT_SUMMARY.md  README.md  docker-compose.yml
backend/: Dockerfile  Program.cs  SecureDocumentAPI.csproj  appsettings.json
backend/Controllers/: AuthController.cs
backend/DTOs/: AuditDTOs.cs  AuthDTOs.cs  DocumentDTOs.cs  SecurityDTOs.cs  UserDTOs.cs
backend/Data/: ApplicationDbContext.cs
backend/Hubs/: DocumentHub.cs
backend/Middleware/: ExceptionHandlingMiddleware.cs  SecurityHeadersMiddleware.cs
backend/Models/: AuditLog.cs  Document.cs  DocumentComment.cs  DocumentPermission.cs  DocumentTag.cs  Folder.cs  SecurityEvent.cs  Tag.cs  User.cs  UserSession.cs
backend/Services/: AuditService.cs  AuthService.cs  IAuditService.cs  IAuthService.cs  IDocumentService.cs  IEncryptionService.cs  IFileProcessingService.cs  IThreatDetectionService.cs  IUserService.cs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/ProtectedRoute/: ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: AdminPage.tsx  AuditPage.tsx  DashboardPage.tsx  DocumentViewPage.tsx  DocumentsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  UploadPage.tsx
frontend/src/services/: authService.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: authSlice.ts  (+2 more)
frontend/src/types/: index.ts
rust-service/: Cargo.toml  Dockerfile
rust-service/src/: main.rs
