[package]
name = "secure-document-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
mime = "0.3"
mime_guess = "2.0"
walkdir = "2.3"
tempfile = "3.8"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
